# neural-asset-forecaster

./: .gitignore  README.md  pyproject.toml  update_btc.py  update_eth.py  update_gold.py  update_silver.py
.github/workflows/: btc-update.yml  pred-update.yml
